[project]
name = "points-via-ome-ngff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  'scipy>=1.2.1',
  'pandas>=1.1.2',
  'numpy>=1.21.2',
  'zarr>=2.5.0,<3',
  'numcodecs>=0.5.7,<0.16.0',
  'ome-zarr<0.10.3',
  'fsspec',
  'spatialdata==0.5.0',
  'dask[dataframe]==2024.11.1',
  'jupyterlab',
  'tqdm'
]
